Added Dependency to ArgumentChecking nuget-paket. Added IEnumerableExtensions

--- a/HeatWave.KitchenSink.PrettyString/HeatWave.KitchenSink.PrettyString.csproj
+++ b/HeatWave.KitchenSink.PrettyString/HeatWave.KitchenSink.PrettyString.csproj
@@ -12,4 +12,8 @@
     <PackageId>HeatWave.KitchenSink.PrettyString</PackageId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HeatWave.KitchenSink.ArgumentChecking" Version="0.2.0" />
+  </ItemGroup>
+
 </Project>
