--- a/HeatWave.KitchenSink.PrettyString/HeatWave.KitchenSink.PrettyString.csproj
+++ b/HeatWave.KitchenSink.PrettyString/HeatWave.KitchenSink.PrettyString.csproj
@@ -4,12 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>HeatWave.KitchenSink.PrettyString</AssemblyName>
     <RootNamespace>HeatWave.KitchenSink.PrettyString</RootNamespace>
-    <Version>0.1.0</Version>
+    <Version>0.2.0</Version>
     <Authors>ThomasRichter</Authors>
+    <projectUrl>https://github.com/ThomasRichter/HeatWave.KitchenSink.PrettyString</projectUrl>
     <Company>HeatWave</Company>
-    <Description>A collection of extension methods for better string representations (e.g. for TimeSpan).</Description>
+    <Summary>A collection of extension methods for better string representations (e.g. IEnumerable and specializations for IList, ISet and IDictionary, TimeSpan).</Summary>
+    <Description>A collection of extension methods for better string representations (e.g. IEnumerable and specializations for IList, ISet and IDictionary, TimeSpan).</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageId>HeatWave.KitchenSink.PrettyString</PackageId>
+    <tags>tostring string format formatting ienumerable ilist iset idictionary</tags>
   </PropertyGroup>
 
   <ItemGroup>
