Fixed tags and projectUrl properties

--- a/HeatWave.KitchenSink.PrettyString/HeatWave.KitchenSink.PrettyString.csproj
+++ b/HeatWave.KitchenSink.PrettyString/HeatWave.KitchenSink.PrettyString.csproj
@@ -4,15 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>HeatWave.KitchenSink.PrettyString</AssemblyName>
     <RootNamespace>HeatWave.KitchenSink.PrettyString</RootNamespace>
-    <Version>0.2.1</Version>
+    <Version>0.2.2</Version>
     <Summary>A collection of extension methods for better string representations (e.g. IEnumerable and specializations for IList, ISet and IDictionary, TimeSpan).</Summary>
     <Description>A collection of extension methods for better string representations (e.g. IEnumerable and specializations for IList, ISet and IDictionary, TimeSpan).</Description>
-    <projectUrl>https://github.com/ThomasRichter/HeatWave.KitchenSink.PrettyString</projectUrl>
+    <PackageTags>tostring,string,format,formatting,ienumerable,ilist,iset,idictionary,netstandard2.0</PackageTags>
+    <PackageProjectUrl>https://github.com/ThomasRichter/HeatWave.KitchenSink.PrettyString</PackageProjectUrl>
     <Authors>ThomasRichter</Authors>
     <Company>HeatWave</Company>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <tags>tostring string format formatting ienumerable ilist iset idictionary</tags>
   </PropertyGroup>
 
   <ItemGroup>
